testando ver se migra para javaee8 o pom.xml